fixed conf,... deleted junk